--- a/_config.yml
+++ b/_config.yml
@@ -73,4 +73,19 @@ jekyll-archives:
 compress_html:
   clippings: all
    
+
+# Google Auth
+WA_KEY: 08113951666
+SITE_KEY: 
+API_KEY: AIzaSyAETmKUC4nfmt-__Ly7f15KXd_Rl3eRieo
+AUTH_DOMAIN: as-syariah-putra.firebaseapp.com
+DATABASE_URL: https://as-syariah-putra.firebaseio.com
+PROJECT_ID: as-syariah-putra
+STORAGE_BUCKET: as-syariah-putra.firebasestorage.app
+SENDER_ID: 235177187138
+APP_ID: 1:235177187138:web:b3fd3025d7f93cd1a6dadb
+MEASUREMENT_ID: G-C082YPREP9
+
+
+
 exclude: [lib, config.rb, .sass-cache, .env, .env_local, Capfile, config, log, Rakefile, Rakefile.rb, tmp, Gemfile, Gemfile.lock, README.md, LICENSE.md, node_modules, package.json, package-lock.json]
